--- a/tasks/api_client.yml
+++ b/tasks/api_client.yml
@@ -1,5 +1,5 @@
 ---
-- name: install api-client python package # noqa no-handler
+- name: Install api-client python package # noqa no-handler
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/api-client"
     state: latest # noqa package-latest
