--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,16 +1,16 @@
 ---
-- name: install nginx
+- name: Install nginx
   ansible.builtin.apt:
     state: present
     name: [nginx]
 
-- name: disable default vhost
+- name: Disable default vhost
   ansible.builtin.file:
     path: /etc/nginx/sites-enabled/default
     state: absent
   notify: restart nginx
 
-- name: deploy nginx conf
+- name: Deploy nginx conf
   ansible.builtin.template:
     src: nginx/libretime.conf.j2
     dest: /etc/nginx/sites-available/libretime.conf
@@ -20,13 +20,13 @@
     backup: true
   notify: restart nginx
 
-- name: enable nginx conf
+- name: Enable nginx conf
   ansible.builtin.file:
     src: /etc/nginx/sites-available/libretime.conf
     dest: /etc/nginx/sites-enabled/libretime.conf
     state: link
   notify: restart nginx
 
-- name: check nginx config
+- name: Check nginx config
   ansible.builtin.shell: /usr/sbin/nginx -t > /dev/null
   changed_when: false
