--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ libretime_migrate: true
 
 # libretime_config_template:
 libretime_public_url: "http://localhost:{{ libretime_listen_port }}/"
-libretime_api_key: "{{ libretime_legacy_api_key | default('hackme' }}"
+libretime_api_key: "{{ libretime_legacy_api_key | default('hackme') }}"
 
 libretime_user: libretime
 libretime_listen_port: 80
