--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -1,5 +1,6 @@
 ---
-- ansible.builtin.import_tasks: _dependencies.yml
+- name: Install api dependencies
+  ansible.builtin.import_tasks: _dependencies.yml
   vars:
     packages_path: "{{ libretime_checkout_dest }}/api"
 
@@ -10,14 +11,16 @@
   notify: Restart libretime
   when: libretime_checkout is changed
 
-- ansible.builtin.import_tasks: _systemd.yml
+- name: Setup api systemd socket
+  ansible.builtin.import_tasks: _systemd.yml
   vars:
     service_name: libretime-api.socket
   notify:
     - Restart libretime
     - Restart nginx
 
-- ansible.builtin.import_tasks: _systemd.yml
+- name: Setup api systemd service
+  ansible.builtin.import_tasks: _systemd.yml
   vars:
     service_name: libretime-api.service
   notify: Restart libretime
