--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -14,7 +14,8 @@
     state: directory
     recurse: true
 
-- ansible.builtin.import_tasks: _systemd.yml
+- name: Setup worker systemd service
+  ansible.builtin.import_tasks: _systemd.yml
   vars:
     service_name: libretime-worker.service
   notify: Restart libretime
