--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,33 @@ jobs:
 
       - run: make install
       - run: make lint
+
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - ubuntu:focal
+          - debian:bullseye
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - run: make install
+      - run: make test
+        env:
+          PY_COLORS: true
+          ANSIBLE_FORCE_COLOR: true
+          MOLECULE_IMAGE: ${{ matrix.image }}
