chore: move apt proxy setup in block

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,17 +5,19 @@
   become: true
 
   tasks:
-    - name: Bypass deb.debian.org repository
-      ansible.builtin.replace:
-        path: /etc/apt/sources.list
-        regexp: 'http:\/\/deb\.debian\.org'
-        replace: "http://cdn-fastly.deb.debian.org"
-
     - name: Setup apt proxy
-      ansible.builtin.apt:
-        state: present
-        name: auto-apt-proxy
-        update_cache: true
+      block:
+        - name: Bypass deb.debian.org repository
+          ansible.builtin.replace:
+            path: /etc/apt/sources.list
+            regexp: 'http:\/\/deb\.debian\.org'
+            replace: "http://cdn-fastly.deb.debian.org"
+
+        - name: Install auto-apt-proxy
+          ansible.builtin.apt:
+            state: present
+            name: auto-apt-proxy
+            update_cache: true
 
     - name: Install dependencies
       ansible.builtin.apt:
