ci: don't setup apt-proxy in ci

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,6 +6,7 @@
 
   tasks:
     - name: Setup apt proxy
+      when: lookup("env", "CI") != "true"
       block:
         - name: Bypass deb.debian.org repository
           ansible.builtin.replace:
