feat: change default checkout path to /usr/src

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,7 +12,7 @@ libretime_max_upload_size: 512M
 
 libretime_checkout_url: https://github.com/libretime/libretime
 libretime_checkout_version: main
-libretime_checkout_dest: /opt/libretime
+libretime_checkout_dest: /usr/src/libretime
 
 libretime_home: /var/lib/libretime
 libretime_log_dir: /var/log/libretime
