--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,7 +3,8 @@ driver:
   name: podman
 
 platforms:
-  - name: instance
+  - &instance
+    name: instance1
     image: ${MOLECULE_IMAGE:-debian:bullseye}
     dockerfile: Dockerfile.j2
     volumes:
@@ -16,6 +17,11 @@ provisioner:
   env:
     ANSIBLE_FORCE_COLOR: true
     ANSIBLE_PIPELINING: true
+  inventory:
+    host_vars:
+      instance1:
+        libretime_public_url: http://localhost:{{ libretime_listen_port }}/
+        libretime_listen_port: 9001
 
 verifier:
   name: testinfra
