feat: allow installing in a python3 venv

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,9 @@ libretime_config_dir: /etc/libretime
 libretime_config_filepath: "{{ libretime_config_dir }}/config.yml"
 libretime_storage_dir: /srv/libretime
 
+# Experimental !
+# libretime_venv:
+
 # > Analyzer
 ########################################################################################
 libretime_analyzer_managed: true
