--- a/tasks/shared.yml
+++ b/tasks/shared.yml
@@ -3,5 +3,6 @@
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/shared"
     state: latest # noqa package-latest
+    virtualenv: "{{ libretime_venv | default(omit) }}"
   notify: Restart libretime
   when: libretime_checkout is changed
