--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -3,6 +3,7 @@
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/worker"
     state: latest # noqa package-latest
+    virtualenv: "{{ libretime_venv | default(omit) }}"
   notify: Restart libretime
   when: libretime_checkout is changed
 
