--- a/tasks/api.yml
+++ b/tasks/api.yml
@@ -8,6 +8,7 @@
   ansible.builtin.pip:
     name: "libretime-api[prod] @ file://{{ libretime_checkout_dest }}/api"
     state: latest # noqa package-latest
+    virtualenv: "{{ libretime_venv | default(omit) }}"
   notify: Restart libretime
   when: libretime_checkout is changed
 
