--- a/tasks/playout.yml
+++ b/tasks/playout.yml
@@ -8,6 +8,7 @@
   ansible.builtin.pip:
     name: "file://{{ libretime_checkout_dest }}/playout"
     state: latest # noqa package-latest
+    virtualenv: "{{ libretime_venv | default(omit) }}"
   notify: Restart libretime
   when: libretime_checkout is changed
 
